# InterviewAgentX

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pass.txt
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: agent_factory.py  answer_evaluator.py  base.py  orchestrator.py  question_curator.py  report_synthesizer.py  resume_analyst.py  structured_output.py  tools.py
backend/app/agents/prompts/: agentic_rag.py  answer_analysis_kb.py  answer_analysis_resume.py  orchestrator.py  question_generation.py  report_generation.py  resume_analysis.py  resume_merge.py
backend/app/db/: postgresql.py
backend/app/graph/: checkpointer.py  state.py  workflow.py
backend/app/graph/nodes/: answer_analysis_node.py  orchestrator_node.py  question_generation_node.py  routing_node.py  (+2 more)
backend/app/models/: __init__.py  answer.py  base.py  candidate.py  interview_report.py  interview_session.py  knowledge_base.py  question.py  resume.py
backend/app/rag/: agentic_retriever.py  hybrid_retriever.py  reranker.py
backend/app/schemas/: common.py  interview.py  knowledge_base.py  report.py  resume.py
backend/app/services/: embedding_service.py  interview_service.py  knowledge_base_service.py  milvus_service.py  minio_service.py  ocr_service.py  resume_service.py  stt_service.py
backend/app/utils/: exceptions.py  logger.py  proxy.py
backend/tests/unit/: test_multi_agent.py
(+61 files in other folders)
