[tool.poetry]
name = "interview-agent-x"
version = "0.1.0"
description = "智能面试辅助系统 - Intelligent Interview Assistant System"
authors = ["IAX Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
langchain = "^0.3.0"
langchain-core = "^0.3.0"
langgraph = "^0.2.0"
langgraph-checkpoint-postgres = "^2.0.0"
langchain-openai = "^0.3.0"
pymilvus = "^2.5.0"
minio = "^7.2.0"
httpx = "^0.28.0"
python-multipart = "^0.0.18"
websockets = "^14.0"
openai = "^1.58.0"
python-dotenv = "^1.0.1"
aiofiles = "^24.1.0"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
